--- a/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
+++ b/_exhibits/தமிழ்மொழிக் காட்சிக்கூடம்/சமூகப் பங்காளர்கள்.md
@@ -92,14 +92,14 @@ text-decoration:none;
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;
   text-align: left;padding: 8px;background-color:#9b4490; color:#fff">நமது தாய்மொழிகளை நேசிப்பதற்கு  வித்திடுவோம்!
-  <br />
-			<span style="font-family:Lato,sans-serif;">Lee Kuan Yew Fund for Bilingualism</span>
+  <br />லீ குவான் யூ இருமொழிக் கல்வி நிதி<br/>
+			<span style="font-family:Lato,sans-serif;">[Lee Kuan Yew Fund for Bilingualism]</span>
 </td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Lee-Kuan-Yew-Fund-for-Bilingualism" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-Lee-Kuan-Yew-Fund-for-Bilingualism" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -107,13 +107,14 @@ text-decoration:none;
 	<table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்<br /><span style="font-family:Lato,sans-serif;">Mandai Wildlife Reserve</span>
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">விலங்குகளின் அற்புதமான உலகிற்குள் நுழையுங்கள்<br />மண்டாய் வனவிலங்குக் காப்பகம்<br/>
+			<span style="font-family:Lato,sans-serif;">[Mandai Wildlife Reserve]</span>
 	</td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Mandai-Wildlife-Group" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-Mandai-Wildlife-Group" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -122,13 +123,13 @@ text-decoration:none;
   width: 100%;">
   <tr>
     <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;
-  text-align: left;padding: 8px;background-color:#9b4490;color:#fff">வமிங் லீ C/o மாணிக்கம்<br/>
-			<span style="font-family:Lato,sans-serif;font-size:20px;">	Mediacorp </span></td>
+  text-align: left;padding: 8px;background-color:#9b4490;color:#fff">வமிங் லீ C/o மாணிக்கம்<br/>மீடியகார்ப்<br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[Mediacorp] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Mediacorp" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition </a>
+ <a href="/tl-Mediacorp" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -136,13 +137,13 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">தேசிய மரபுடைமைக் கழகம்<br />
-			<span style="font-family:Lato,sans-serif;font-size:20px;">	National Heritage Board </span></td>
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">தேசிய மரபுடைமைக் கழகம்<br />தேசிய மரபுடைமைக் கழகம் <br/>
+			<span style="font-family:Lato,sans-serif;font-size:20px;">[National Heritage Board] </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-NHB" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-NHB" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -150,14 +151,14 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">நம் மொழி, நம் பண்பாடு, நம் சிங்கப்பூர்!<br />
-			<span style="font-family:Lato,sans-serif;font-size;20px;">National Institute of Education</span>
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">நம் மொழி, நம் பண்பாடு, நம் சிங்கப்பூர்!<br />தேசியக் கல்விக்கழகம்<br/>
+			<span style="font-family:Lato,sans-serif;font-size;20px;">[National Institute of Education]</span>
 	</td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-NIE" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-NIE" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -165,13 +166,14 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">தமிழ் நூலகச் சேவைகள்<br /><span style="font-family:Lato,sans-serif;">National Library Board</span>
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">தமிழ் நூலகச் சேவைகள்<br/>தேசிய நூலக வாரியம்<br/>
+			<span style="font-family:Lato,sans-serif;">[National Library Board]</span>
 	</td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-NLB" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-NLB" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -179,13 +181,14 @@ text-decoration:none;
 	<table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">நாவில் தமிழ்; நாளும் தமிழ்<br /><span style="font-family:Lato,sans-serif;">Tamil Language Learning Promotion Committee </span>
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">நாவில் தமிழ்; நாளும் தமிழ்<br/>தமிழ்மொழி கற்றல் வளர்ச்சிக்குழு<br/>
+			<span style="font-family:Lato,sans-serif;">[Tamil Language Learning Promotion Committee] </span>
 	</td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-TLLPC" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-TLLPC" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
@@ -193,31 +196,32 @@ text-decoration:none;
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">முரசுடன் ஓர் இன்பமான தமிழ்மொழிக் கற்றல் பயணம்<br /><span style="font-family:Lato,sans-serif;">Tamil Murasu</span>
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">முரசுடன் ஓர் இன்பமான தமிழ்மொழிக் கற்றல் பயணம்<br />தமிழ் முரசு<br/>
+			<span style="font-family:Lato,sans-serif;">[Tamil Murasu]</span>
 	</td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-Tamil-Murasu" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="/Tamil-Murasu-tl-exhibition" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-Tamil-Murasu" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
 <br/><table style="border-collapse: collapse;
   width: 100%;">
   <tr>
-    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">தொழில்நுட்பம்வழி தமிழ்மொழி<br />
-			<span style="font-family:Lato,sans-serif;"> Umar Pulavar Tamil Language Centre</span>
+    <td class="data" style="border: none; width: 70%;font-family:Anjal InaiMathi;text-align: left;padding: 8px;background-color:#9b4490;color:#fff">தொழில்நுட்பம்வழி தமிழ்மொழி<br/>உமறுப்புலவர் தமிழ்மொழி நிலையம்<br/>
+			<span style="font-family:Lato,sans-serif;">[Umar Pulavar Tamil Language Centre]</span>
 	</td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
   <div class="btn-group">
- <a href="/tl-UPTLC" class="btn1" style="color:#fff;">View Synopsis</a>
-  <a href="#" class="btn2" style="color:#fff;">View Exhibition</a>
+ <a href="/tl-UPTLC" class="btn1" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">சுருக்கவுரையைக் காண</span></a>
+  <a href="#" class="btn2" style="color:#fff;"><span style="font-family:Anjal InaiMathi;font-size:16px;">ஒளிக்காட்சியைக் காண</span></a>
   </div></td>
     </tr>
 </table>
 <br/>
 <br/>
-	<br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
+	<br/><br/><p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
