--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -75,8 +75,10 @@ td{
          	<p style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">எனவே, பெற்றோர்களுக்கு உதவும் நோக்கில் 2015 தமிழ்மொழிப் பாடக்கலைத்திட்டத்தின் சிறப்பு அம்சங்களையும் கற்றல் வளங்களையும் அறிமுகப்படுத்தும் வகையில் இந்தக் கையேடு தயாரிக்கப்பட்டுள்ளது. </p>
          	<p style="font-family:Anjal New InaiMathi Sch Book; text-align:left;">தமிழ்மொழியைப் பிள்ளைகள் நன்கு கற்கப் பிள்ளைகளுக்குப் பெற்றோர் எவ்வாறெல்லாம் உதவலாம் என்பதற்கான பரிந்துரைகளும் இக்கையேட்டில் இடம்பெற்றுள்ளன.</p>
           </td>
- <td>
+ <td style="width:40%">
 <img src="/images/TL-Pri-1.png" />
+	 <br />
+<img src="/images/TL-Pri-2.png" />
 </td>
     </tr>
  </table>
