--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -39,7 +39,7 @@ td{
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_1.jpg"><br/>
 <a href="#C1" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0; text-align:center;"> 01 தொடக்கப்பள்ளிப் பாடக்கலைத்திட்டம்</a><br>
  <a href="#C2" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0;"> 02 மகிழ்வூட்டும் கற்றல் </a>
- <a href="#C3" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0; text-align:center;"> 03 கற்றல் வளங்களும்நடவடிக்கைகளும்</a>
+ <a href="#C3" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0; text-align:center;"> 03 கற்றல் வளங்களும்நடவடிக்கைகளும்</a><br>
 <a href="#C4" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0; text-align:center;"> 04 விளையாட்டுவழிக் கற்றல் </a>
 <a href="#C5" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0;text-align:center;"> 05 ஆர்வமூட்டும் கற்பித்தல் உத்திமுறைகள்</a>
  <a href="#C6" style="background-color: purple; font-size: 20px; font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-decoration: none; padding: 14px 16px; color: #ffffff; border-radius: 16px; display: inline-block; miso-padding-alt: 0;text-align:center;"> 06 தகவல் தொடர்புத் தொழில்நுட்பம்</a><br>
