--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -60,6 +60,16 @@ td{
 <h4 id="C1" style="font-family:Anjal New InaiMathi Sch Book;">நெகிழ்வுத்தன்மைமிக்க பாடத்திட்டம்
 </h4>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_5.jpg"><br/>
+<div class="row">
+  <div class="column">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/39R_NiRBC08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
+    <p style="font-weight:bold;text-align:center;">Video 1</p>
+  </div>
+  <div class="column">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Phqg9KlD0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+    <p style="font-weight:bold;text-align:center;">Video 2</p>
+  </div>
+  </div>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_6-min.jpg">
 <br/>
 <img id="C4" src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_7.jpg">
