--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -130,11 +130,15 @@ width:90%;
     <img src="/images/TL-Sec-2.png" style="width:25%">
   </div>
   </div>
-  <img src="/images/TL-Sec-3.png" style="width:100%;" /><br />
-  <img src="/images/Tl-Sec-4.png" style="width:100%;" /><br />
-  <br />
-<img src="/images/TL Sec 5.png" style="width:100%;" /><br />
-   <p style="text-align:center;font-family:Anjal New InaiMathi Sch Book; font-size:20px" class="lbCh">மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
+<div class="rowimg1">
+  <div class="columnimg1">
+    <img src="/images/TL-Sec-3.png" style="width:25%">
+  </div>
+  <div class="columnimg1">
+    <img src="/images/Tl-Sec-4.png" style="width:25%">
+  </div>
+</div>
+<p style="text-align:center;font-family:Anjal New InaiMathi Sch Book; font-size:20px" class="lbCh">மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
 </p>
        <center>
          <iframe width="560" height="315" src="https://www.youtube.com/embed/nnuIhutTDUM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
