--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -122,11 +122,11 @@ width:90%;
  <br />
 இதற்கு ஏதுவாக ஒவ்வோர் ஆண்டும் மாணவர்களுக்கு இலக்கியப் பனுவல்கள் அறிமுகப்படுத்தப்பெறுகின்றன.  இவ்வாண்டு உயர்நிலை ஒன்று மாணவர்களுக்குச் சிறுகதைகள் பாடவளங்களாக வழங்கப்பெற்றுள்ளன.
  அடுத்தாண்டு உயர்நிலை இரண்டு மாணவர்கள் கவிதை இலக்கியத்தைப் படித்து மகிழ்வர். </p>
-<div class="rowimg1">
-  <div class="columnimg1">
+<div class="row">
+  <div class="column">
     <img src="/images/TL Sec 1.png" style="width:25%">
   </div>
-  <div class="columnimg1">
+  <div class="column">
     <img src="/images/TL-Sec-2.png" style="width:25%">
   </div>
   </div>
