--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -184,7 +184,7 @@ width:90%;
   <iframe width="560" height="315" src="https://www.youtube.com/embed/6vm8yxPb5ic" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
 <br /><br />
 	<center>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/i8hTUAv9PYI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><center>
+  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/i8hTUAv9PYI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><center>
 <br /><br />
 	<center>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/z1Hu7ajoXcs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
