--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -91,11 +91,11 @@ description: ""
 这是我们的家园。<br/>
 <strong>*请注意，歌词是帮助学唱，不是认字哦！</strong>
 </p>
-</td>
-  </table><br />
+<br />
    <p style="font-size:25px;font-family:KaiTi">过后，你可以利用一些再循环材料或住家周围的落叶和枝条，与孩子一起制作新加坡景点的贴画。</p>
   <p style="font-size:25px;font-family:KaiTi"> 阅读相关绘本让孩子更了解新加坡吧：<br/>
-<a href="https://www.bilingualism.sg/files/whats-up/LKYFB-Fund-supported-Print-Resources.pdf" target="_blank;">   https://www.bilingualism.sg/files/whats-up/LKYFB-Fund-supported-Print-Resources.pdf </a>  </p>
+<a href="https://www.bilingualism.sg/files/whats-up/LKYFB-Fund-supported-Print-Resources.pdf" target="_blank;">   https://www.bilingualism.sg/files/whats-up/LKYFB-Fund-supported-Print-Resources.pdf </a>  </p></td>
+  </table>
     <table width="300px" border="0" cellpadding="0" cellspacing="0" style="-moz-border-radius: 25px; -webkit-border-radius: 25px; border-radius: 25px; border: 3px solid #ccc;">
    <td>
 <h4 style="font-family:KaiTi;font-size:25px;">点子二: 我是小小导游 </h4>
